--- a/.env
+++ b/.env
@@ -14,11 +14,11 @@ LOG_LEVEL=debug
 # prod_mysql  mysql
 DB_CONNECTION=mysql 
 
-DB_HOST=127.0.0.1
+DB_HOST=92.204.220.137
 DB_PORT=3306
-DB_DATABASE=el_isi_dunyasi_test
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_DATABASE=walkbuddy
+DB_USERNAME=walkbuddy
+DB_PASSWORD=619619Ee.
 
 
 
