--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:Yev2qNnDduo3igU/Lzyo6Ppsv0J+kVAsmH3QhgTP52c=
 APP_DEBUG=true
-APP_URL=http://api.elisidunyasi.com
+APP_URL=http://ardaemregul.dev/
 
 
 LOG_CHANNEL=stack
@@ -14,10 +14,10 @@ LOG_LEVEL=debug
 # prod_mysql  mysql
 DB_CONNECTION=mysql 
 
-DB_HOST=92.204.220.137
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=walkbuddy
-DB_USERNAME=walkbuddy
+DB_DATABASE=yemreeke_walkbuddy
+DB_USERNAME=yemreeke_walkbuddy
 DB_PASSWORD=619619Ee.
 
 
